page shows something now

--- a/src/serv/app/public/index.html
+++ b/src/serv/app/public/index.html
@@ -1,21 +1,22 @@
 <!doctype HTML>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"</meta>
-        <title>Tax Mod | Indian taxes made easier</title>
-    </head>
-    <body>
+<head>
+    <meta charset="UTF-8"</meta>
+    <title>DevoirTax| Indian taxes made easier</title>
+</head>
+<body id="home">
+    <div class="page">
+    <div class="hero">
     <div class="container">
         <nav>
             <ul class="left">
-                <li>
-                <h1 class="logo"><a href="/">DevoirTax</a></h1></li>
+                <li><h1><a href="/">DevoirTax</a></h1></li>
                 <li><a href="/features">Features</a></li>
                 <li><a href="/pricing">Pricing</a></li>
             </ul>
             <ul class="right">
-                <li><a class="primary" href="/app/#/login">Log In</a></li>
-                <li><a class="primary btn ripple" data-ripple-color="rgba(255,255,255,.1)" href="/app/#/signup">Sign Up</a></li>
+                <li><a class="primary" href="/login">Log In</a></li>
+                <li><a class="primary btn ripple" data-ripple-color="rgba(255,255,255,.1)" href="/signup">Sign Up</a></li>
             </ul>
         </nav>
         <div class="hero-copy">
@@ -28,6 +29,7 @@
         <p class="text-muted credit">&copy Devoir</p>
       </div>
     </div>
+</div>
     <link rel="stylesheet" href="styles/main.css" type ="text/css"></link>
     <link href="libs/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap-theme.min.css"></link>
