--- a/src/serv/public/index.html
+++ b/src/serv/public/index.html
@@ -81,6 +81,6 @@
 						<li>&copy;Sudarshan Reddy</li>
 					</ul>
 			</footer>
-
+            <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
 	</body>
 </html>
